# debugsymb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: DebugSymbols.cmake
src/app/: CMakeLists.txt  main.cpp
src/inc/: class.h  global.h
src/lib/: CMakeLists.txt
src/lib/class/: CMakeLists.txt  class_lib.cpp
src/lib/global/: CMakeLists.txt  global_lib.cpp
